# tko

./: .coverage  .gitignore  .tkgui.ini  CONTRIBUTING.md  DOCUMENTATION_PLAN.md  LICENSE  README.md  Readme.md  changelog.md  check_links.sh  consolidated_search.txt  debug.txt  draft.c  files_to_change.txt  graph.dot  guide.md  hardcoded_calls.txt  keyword_search.txt  log.txt  main.py  merge.py  package.json  plan.md  publish.sh  pyproject.toml  pyrightconfig.json  qa.md  requirements.txt  setup.py  setup_borda.py  systems.md  tko.py  update.md  update.sh  update_version.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: documentation_bug.yml
.github/workflows/: docs-check.yml  tests.yml
check/: merge.py  tko  update.sh  verify.sh
docs/: ARCHITECTURE.md  EXAMPLES.md  FAQ.md  FORMATS.md  LANGUAGE_SUPPORT.md  README.md  REFERENCE.md  TASK_LIFECYCLE.md  TESTING.md
ed/escada/: draft.cpp
fup/carro/: car.hpp  cases.tio
fup/media/: cases.tio  teste.cpp
fup/positivo/: cases.tio
fup/resto/: cases.tio
fup/segundos/: cases.tio
fup/sobrou/: cases.tio
fup/tres/: cases.tio  draft.c
fup/triangulo/: lib.cpp
fup@001/: .info
ihc_tests/: run_all.py  update_all.py
ihc_tests/01_basic_info/: test_empty.sh  test_guides.sh  test_version.sh  zz_test_empty.out  zz_test_guides.out  zz_test_version.out
ihc_tests/02_list/: basic_list.sh  cases2.tio  repeated.sh  zz_basic_list.out  zz_repeated.out
ihc_tests/04_diff/: cases.tio  no_input_side.sh  no_input_up.sh  zz_no_input_side.out  zz_no_input_up.out
ihc_tests/05_loading_files/: missing_target.sh  running_modes.sh  running_modes2.sh  running_modes3.sh  running_modes4.sh  zz_running_modes.out  zz_running_modes4.out
ihc_tests/06_failures/: all.sh  first.sh  quiet.sh  zz_all.out  zz_first.out
ihc_tests/07_config/: config.cfg
ihc_tests/08_cio/: _calc.tio  base_tio.sh  calc2.md
install/: codespace.md  intro.webm  linux.md  windows.md
pinga/.tko/: repository.yaml.new
poo/budega/: cases.tio
project/: dependencias.txt  merge.py  tko.py  update.md
replit/: Readme.md  bashrc  check.py  graph.dot  merge.py  msg.txt  settings.json  tko  update.sh  verify.sh
rota/: __main__.py  hello.py
tests/: __main__.py  compare.py  data.cfg  test_cio.py  test_diff.py  test_failures.py  test_fmt.py  test_ftext.py  test_hello.py  test_list.py  test_loading.py  test_logger.py  test_one.py  test_run_cmd.py  test_run_fup.py  test_run_overflow.py  test_run_poo.py  test_run_sql.py  test_sentence.py  test_show_guide.py  test_text.py
tools/: fzf-preview.sh
wiki/: Classroom.md  Criando-Atividades.md  Criando-Tarefas-e-Testes.md  Desenvolvimento-de-Tarefas.md  Fazendo-Atividades.md  Formatando-README.md  Gamificacao-e-Progressao.md  Linguagens.md  Marcadores-e-Tipos.md  Organizando-Disciplinas.md  Outros-Sistemas-Operacionais.md  Testando-Sem-Disciplina.md  Windows-Sem-WSL.md  Windows-WSL.md  about.md  audit-preview.md  audit.md  build-all.md  filter.md  rebase-links.md  ubuntu_git_python_tko.md  ubuntu_vscode.md
(+893 files in other folders)
