[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]

[project]
name = "tko"
version = "8.3.2"
description = "Add your description here"
authors = [
    { name = "David", email = "sena.ufc@gmail.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "diff-match-patch>=20241021",
    "icecream>=2.1.4",
    "markdown>=3.7",
    "pip>=26.0.1",
    "platformdirs>=4.9.2",
    "pygments>=2.19.1",
    "pymdown-extensions>=10.15",
    "pytest>=9.0.2",
    "pyyaml>=6.0.2",
    "types-chardet>=5.0.4.6",
    "types-markdown>=3.7.0.20250322",
    "uniplot==0.17.1",
    "windows-curses; platform_system=='Windows'",
]

[project.scripts]
tko = "tko.__main__:main"
# feno = "tko.feno.feno:feno_main"
