[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "tko"
version = "9.17.7"
description = "Add your description here"
authors = [
    { name = "David", email = "sena.ufc@gmail.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "diff-match-patch>=20241021",
    "filelock>=3.25.2",
    "markdown>=3.7",
    "platformdirs>=4.9.2",
    "prompt-toolkit>=3.0.52",
    "pygments>=2.19.1",
    "pymdown-extensions>=10.15",
    "pyyaml>=6.0.2",
    "typer>=0.25.0",
    "uniplot==0.17.1",
    "watchdog>=6.0.0",
    "wcwidth>=0.2.13",
    "icecream>=2.1.4",
    "windows-curses; platform_system=='Windows'",
]

[project.optional-dependencies]

dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "types-chardet>=5.0.4.6",
    "types-markdown>=3.7.0.20250322",
]

[project.scripts]
tko = "tko.__main__:main"
